Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46456

winrt: Qt Quick camera capture cause crash on Lumia630

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.5.1
    • 5.5.1
    • Multimedia
    • WinRT
    • dc9e10d4b7acd9e752a7b094c7178a7ecbe96ff7

      Originally from Bug QTBUG-45920.
      Steps to reproduce:
      1. Build 5.5
      2. Open declarative-camera example
      3, Add WINRT_MANIFEST.capabilities_device += webcam
      3. run this example on test device(Lumia 630 or Lumia530)

      Expected result: user should see camera view finder and be able to capture photos/record videos
      Actual result: the screen behind controls is black. Clicking on buttons lead to application crash

        For Gerrit Dashboard: QTBUG-46456
        # Subject Branch Project Status CR V

            wupeng PengWu
            wupeng PengWu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes